css/style.css
body {
    /* font-family: 'Roboto', sans-serif; */
    /* font-size: 48px; */
    /* letter-spacing: 1px !important;  */
    
    @font-face{font-family: 'Nanum Gothic', sans-serif;} 
    @font-face{font-family: 'Noto Sans KR', sans-serif;} 
    @font-face{font-family: 'Muli', sans-serif; } 
}
.footer-icon{
    margin: 10px 6px;
    width: 14%;
}
.footer-icon.active{
    margin: 10px 6px;
    width: 20%;
}
h3{
    margin: 10px auto;
    text-align: center;
}
.container {
    position: relative;
    margin: 0 auto;
    padding: 12px;
    padding-top:48px;
    /* height: 640px; */
    width: 100%;
    max-width: 640px;
    border: 2px solid #e6e6e6;
}
.detail-info {
    /* margin: 20px; */
    /* padding: 7px; */
    padding: 12px;
    
    padding-top: 19px; 
    border-radius: 4px;
    border: 1.4px solid #d4d2d2;
    position: relative;
}


.memo-list{
    border: 2px solid #e6e6e6;
    border-radius: 4px;
    margin-top: 10px;
    padding: 7px;
    /* border: 1px solid black; */
}

.container .header {max-height:75px; display: flex; max-width:300px;  margin:0 auto; padding-bottom:7px;}
.container .header span{ width:33%; }
.container .header-bottom-line{ height:2.7px; background:#d4d2d2;}
.detail-time-info{ display:flex;}
.detail-time-info span{ width:50%;}
.detail-time-info .time{text-align: left; color:#000000}
.detail-time-info .date{text-align: right; color:#696c74;}

.detail-user-info {
    margin-top:12px;
}
.detail-info .name-container {
    /* line-height: 20px; */
    padding-top: 7px;
}
.detail-info .name{
    margin: 0;
    font-size: 17px !important;
    font-weight: bold;
    font-size: 14px; 
    color:#696c74
}
.detail-info .title{
    margin: 0;
    font-size: 17px !important;
    font-weight: bold;
    font-size: 14px; 
    color:#696c74;
    text-align: left !important;
}
.detail-info .resv{
    display: inline-block;
    padding: 4px 3px;
    line-height: 7px;
    font-size: 11px;
    background: #4CAF50;
    color: #FFF;
    border-radius: 5px;
}
.property-list{
    margin-top:12px;
}
.detail-info .properties { display:flex; margin-top:6px;}
.detail-info .properties .prop-title { color:#696c74;  font-weight: bold; width:60px;}
.detail-info .properties .prop-value { margin-left:12px;}
.detail-info .profile-img {position: absolute; right:12px; top: 60px;}
.detail-info .profile-img img {width:45px; height:45px;}

.detail-info .menu-btn {display:flex; 
    justify-content: space-between;
    font-size:10px; padding-top: 35px;}
.detail-info .menu-btn span {}

.dialog { 

}
.dialog-1{ margin: 0 auto; font-size:0.9rem; max-width: 320px; border-radius: 4px; border: 1.4px solid #d4d2d2;}
.dialog-1 .title {width: fit-content; padding: 5px 10px;margin:20px auto; display: block; text-align: center; border-bottom:2px solid #000; font-weight:400; color:#000;}
.dialog-1 .longDesc {margin-bottom: 20px; padding:0px 20px; text-align:center; color:#000;}
.dialog-1 .dialog-detail2 {margin-bottom: 20px; padding:0px 20px; text-align:center; color:#000;}
.dialog-1 p {width:65%;  margin:0px auto; text-align:center;}
.dialog-1 .desc{ display: flex;}
.dialog-1 .desc div {width:50%; text-align: center;}
.dialog-1 .dialog-detail {padding:10px;}
.dialog-1 .btn-group {display:flex; }
.dialog-1 .btn-group .btn {width: 50%; text-align: center; color:#000; }
.dialog-1 .confirm-message {margin-bottom: 20px; padding:0px 20px; text-align:center; color:#000;}

.dialog-2{ margin: 0 auto; font-size:0.9rem; max-width: 320px; border: 1px solid black; border: 1.4px solid #d4d2d2;}
.dialog-2 .title {text-align: center; font-size:30px; margin:23px auto;}

.dialog-2 .desc {margin-bottom: 20px; font-weight:400; text-align:center; color:#000;}
.dialog-2 hr { width: 95%;}
.dialog-2 .btn {width: 100%; text-align: center; color:#000;}

.bottomMenu {position: absolute; bottom: 0px; width:100%;}
.bottomMenu .title {background: gray; color:white; text-align: center;}
.bottomMenu p {text-align:center}

.memo-list{
    border: 1.4px solid #d4d2d2;
    font-size:14px;
    padding: 12px;
}

.menu-title {
    font-size: 14px;
    font-weight: 600;
    border-left: 2px solid;
    padding-left: 12px;
    letter-spacing: 1.82px;
    
}
.memo-title {
    display:flex;
}
.memo-title div {
    width: 50%;
}
.font-dart-gray {
    color: #696c74;
}
.font-light-gray {
    color: #a5a5a5;
}
.memo-description {
    font-weight:bold;
    padding-top:7px;
    line-height: 16px;
}
.memo-description p {
    line-height: 22px;
}
.red-font {
    color: #f22a5e;
}
.red {
    color: #f22a5e;
    border-color: #f22a5e;
}
.font-blue {
    color: #1b7cdd;
}
.blue {
    color: #1b7cdd;
    border-color: #1b7cdd;
}

.black{
    color: #000000;
    border-color: #000000;
}
.text-left {text-align:left;}
.text-right {text-align:right;}

.register-list{
    margin: 20px; padding: 7px;
    border: 1.4px solid #d4d2d2;
    font-size:10px;
}
.register-user-info{
    display:flex;

}
.register-user-info{

}
.register-row {display:flex;}

.profile-list{
    width:65%; 
    display:flex; border-bottom: 0.7px solid #a5a5a5; padding-bottom:10px; padding-top:10px;}
.profile-list .image { border-radius: 10px; border: 1.4px solid #d4d2d2; margin-right:4px;}
.profile-list .name { font-size:16px; line-height:45px; color:#000; padding-left:4px; padding-right:4px;}
.profile-list .phone { font-size:16px;  line-height:45px; color: #696c74; padding-left:4px; padding-right:4px;}


.card-body{}
  
.search-form { position: relative; }
  
.search-form .search-form-input {
height: auto;
width: 80%;
margin: 0 0 .5rem 0;
padding: .6rem 0 .4rem 0;
padding-left: 12px;
padding-right: 25px;
transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
outline: 0;
border: none;
border-bottom: 1px solid #000;
border-radius: 0;
box-sizing: content-box;
box-shadow: none;
background-color: transparent;
transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
outline: 0;
border: none;
border-bottom: 1px solid #000;
border-radius: 0;
box-sizing: content-box;
box-shadow: none;
background-color: transparent;

}

.search-button{
/* position: absolute; */
padding-bottom: 5px;
background: transparent;
outline: none;
border: none;
padding-left: 0;
right: 0;

}

.search-text {
    color: black;
font-size: 1rem;
font-weight: 400;
line-height: 1.5;
}

.active-white input[type=search]:focus:not([readonly]) {
    border-bottom: 1px solid blue;
    box-shadow: 0 1px 0 0 blue;
    color: blue;
  }
  
.found-user {
    margin-top:3px;
    margin-bottom:40px;
}

.class-detail{
    position:relative;
    padding: 13px 7px;
    margin-bottom:3px;
    background: #d4d2d2;
    color: #000;
}
.class-tab {
    margin-top:20px;
    display:flex;
    border-radius: 4px;
    border: 1.4px solid #d4d2d2;
}

.class-tab div{ min-width:120px; text-align: center; padding: 6px 12px;}
.class-tab div.active {border-top: 2px solid #000; color:#000;}
.class-tab hr {padding-top:3px;}
.class-resv-btn{position: absolute; bottom: 10px; right:17px; background: #fff; padding: 5px 15px; border-radius: 4px;}

.user-img{
    width:43px;
    height: 43px;
    border: 0.7px solid gray;
    border-radius: 5px;
}
.circle-value {
    margin:7px;
    font-size:1rem; 
    color:white;border-radius: 50%; text-align: center;
    padding:2px;
    width: 30px;
    /* font-weight: bold; */
    height: 30px; line-height: 25px;
}
.bg-gray{background:gray;}
.bg-red{background:#f22a5e;}
.bg-green{background: #4caf50;}
.bg-blue{background:#1b7cdd;}

.user-detail .user-name{
    letter-spacing: 0.1em;
    padding-left:4px; font-size:1.1rem; line-height: 45px; font-weight: bold;
}
.time-hour-list {
    padding:20px;
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
}
.time-hour-list > div > div{ font-weight: bold;margin-bottom:7px;}
.time-hour-list > div > ul > li{font-size:21px; padding-left:8px; border-left: 1px solid black; margin-bottom:5px;}
/*  */

.group .detail-info {
    border: 1.4px solid #d4d2d2;
}
.group .detail-info .title {
    font-weight: bold;
    font-size:16px; 
    text-align:center;
}
.group .time-info {
    display: flex;
    
}
.group .time-info .hour{
    font-size:1.2rem;
    font-weight: 500;
    
}
.group .time-info .date{
    margin-left:auto;
    font-weight:bold;
}

.grid-assets {
    width:80%;
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 25px;
}
.asset-row {
    display: flex;
    padding: 12px 0px;
}
.asset-row div {
    /* margin: 10px 10px; */
}

.asset-row div:first-child{
    font-weight: bold;
    margin-right:10px;
}

.group .user-list {padding:20px 4px;}
.group .user-detail{
    
    width:100%;
    display:flex;
    /* grid-template-columns: 1fr 1.2fr 0.5fr 0.5fr 1fr 1fr 1fr ; */
    /* grid-template-columns: 45px 100px 34px 34px 12px 74px 74px 74px ;
    grid-template-rows: 45px; */
    border-bottom: 0.7px solid #d4d2d2;
}


.user-list .btn{
    height: 40px;
    padding: 4px;
    width: 100%;
    font-size: 12px;
    background: #ededed;
    /* width: 100%; */
    
    padding: 0px 7px;
    /* margin: 2px auto; */
    display: block;
}

.bottom-menu {
    
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5px 10px;
    font-size:14px;
    background:#9c9ca0;
    color:white;
}
.up, .down{margin: 0 5px; padding:3px 2px;}
.bottom-menu-desc {
    font-size: 14px;
    padding: 20px 40px; 
    color: #000;
}
.bottom-menu-desc p{margin-bottom:7px}
.botton-menu-input {
    padding: 0px 40px; 
}
.bottom-menu-detail{background:#f2f3f5; padding-bottom:13px;}
.botton-menu-input button {
    background: #000;
    color: #fff;
    padding: 4px 20px;
    font-size: 16px;
    border-radius: 7px;
}

.resv-class-container{
    padding: 20px 0px;
    background:gray;
}
.resv-class-detail{
    margin-top:10px;
    padding-top: 20px;
    padding-bottom: 20px;
    background:#fff;
    color:#000;
}
.policy{color:#000; padding:20px;}
.resv-class-detail > div {margin-bottom:7px;}
.resv-time{display:flex;}
.class-title{ font-size:20px; font-weight: bold; margin-bottom:12px;}
.resv-button{background:black; color:white; padding: 5px 20px; border-radius: 4px; margin:0 auto; display: block;}

/* 10.5 */
.input-desc{
    width: 80%;
    margin: 0 auto;
    display: block;
}

.calendar-date {
    margin: 0 auto;
    display: block;
}
.calendar-date .date-btn {
    margin: 0px auto;
    display: block;
    padding: 0px 20px;
}

.time-select{
    border:1px solid gray;
}
.time-input{
    padding: 70px;
    border:1px solid gray;
}
.time-am-input{ padding:5px 10px; width:60px; text-align: center; font-size: 1rem;}
.time-pm-input{ padding:5px 10px; width:60px; text-align: center;font-size: 1rem;}
.time-hour-input{
    width:60px;
    border: 1px solid #fff !important;
    /* background:gray !important; */
    text-align: center !important;
    padding: 5px !important;
    /* color:white; */
    font-size: 2rem !important;
}
.time-min-input{
    width:60px;
    padding: 5px !important;
    border: 1px solid #fff !important;
    /* background:gray !important; */
    font-size: 2rem !important;
    text-align: center !important;
    /* color:white; */
}

.resv-confirm{
    padding: 20px 10px;
    color:black;
    background: lightgray;
}
.resv-confirm p{
    text-align: center;
    margin-bottom:7px;
}
.calendar-container{
    height:300px; 
    width: 100%;
}

.time-am-input.active {
    font-weight: bold;
    color:black;
}
.time-pm-input.active {
    font-weight: bold;
    color:black;
}

.confirmBtn{
    margin:0px 7px;
    margin-top:10px;
    padding: 4px 10px;
    background:white;
    border-radius: 4px;

}

